GV opens keyboard on mtggoldfish.com that had not been opened when switching apps
Categories
(GeckoView :: IME, defect, P2)
Tracking
(firefox70 wontfix, firefox71 fixed)
People
(Reporter: cpeterson, Assigned: m_kato)
References
Details
Attachments
(2 files)
STR
- Load mtggoldfish.com in Fenix.
- Press the Android home button to switch to the Android home screen.
- Switch back to Fenix.
Expected Result
Nicole on the Fenix UX team says the keyboard should no longer be open, just like in Chrome and Fennec.
Actual Result
The keyboard is open even though it had not been opened.
I can reproduce this problem in Fenix, RB, and Focus+GV on this site. This appears to be a GV bug since the problem is reproducible in multiple GV apps but not in Fennec.
This bug was originally filed in the Fenix issue tracker:
https://github.com/mozilla-mobile/fenix/issues/2071
| Assignee | ||
Updated•6 years ago
|
| Reporter | ||
Comment 1•6 years ago
|
||
This bug is a feature enhancement and doesn't need to block Fenix MVP. The correspending Fenix issue mozilla-mobile/fenix#2071 is a P2 and not a Fenix MVP blocker.
| Reporter | ||
Comment 2•6 years ago
|
||
Fenix bug mozilla-mobile/fenix#3556 has steps to reproduce the same keyboard issue on a different website.
The Fenix team prioritized this issue as a P2, so we should try to fix this bug in Q3 or Q4. This keyboard behavior annoys users.
| Reporter | ||
Comment 3•6 years ago
|
||
Adding [geckoview:fenix:m8] whiteboard tag because Makoto says he will work on this bug in Q3.
| Assignee | ||
Comment 4•6 years ago
|
||
| Assignee | ||
Comment 5•6 years ago
|
||
Actually, CAUSE_UNKNOWN_CHROME is set when caller is chrome process. I would
like to change that this value is called from chrome or native.
| Assignee | ||
Comment 6•6 years ago
|
||
Even if element.focus is called from chrome, we always open virtual keyboard.
But I would like to change this behaviour that virtual keyboard isn't opened
via element.focus that is chrome script.
Depends on D44104
| Reporter | ||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/f9a0c897d2db
https://hg.mozilla.org/mozilla-central/rev/98034cd40bbe
| Reporter | ||
Comment 9•3 years ago
|
||
Moving some keyboard bugs to the new GeckoView::IME component.
Description
•