Bug 1552041 - Part 2. Don't open virtual keyboard via chrome script. r=geckoview-reviewers,snorp

Even if `element.focus` is called from chrome, we always open virtual keyboard.
But I would like to change this behaviour that virtual keyboard isn't opened
via `element.focus` that is chrome script.

Depends on D44104

Differential Revision: https://phabricator.services.mozilla.com/D44105

--HG--
extra : moz-landing-system : lando